add mobile navbar

--- a/index.html
+++ b/index.html
@@ -146,71 +146,58 @@
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">RESEARCH
                                 JOURNALS</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Academic</a></li>
-                                <li><a href="admission.html">Admission</a></li>
-                                <li><a href="academic-area.html">Academic Area</a></li>
-                                <li><a href="campus-life.html">Campus Life</a></li>
-                                <li><a href="scholarship.html">Scholarship</a></li>
-                                <li><a href="tution-fee.html">Tuition Fee</a></li>
-                                <li><a href="alumni.html">Alumni</a></li>
-                                <li><a href="program-single.html">Program Single</a></li>
-                                <li><a href="department-details.html">Department Details</a></li>
+                                <li><a href="academic.html">Management Insight Journal</a></li>
+                                <li><a href="admission.html">Purushartha Journal</a></li>
+                                <li><a href="academic-area.html">SMS Journal of Enterpreneurship & Innovation</a></li>
+                                <li><a href="campus-life.html">Commerce Research Review</a></li>
+                                <li><a href="scholarship.html">Computing Trendz</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PUBLICATION</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Academic</a></li>
-                                <li><a href="admission.html">Admission</a></li>
-                                <li><a href="academic-area.html">Academic Area</a></li>
-                                <li><a href="campus-life.html">Campus Life</a></li>
-                                <li><a href="scholarship.html">Scholarship</a></li>
-                                <li><a href="tution-fee.html">Tuition Fee</a></li>
-                                <li><a href="alumni.html">Alumni</a></li>
-                                <li><a href="program-single.html">Program Single</a></li>
-                                <li><a href="department-details.html">Department Details</a></li>
+                                <li><a href="academic.html">Books & Souvenirs</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">ALUMNI</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Academic</a></li>
-                                <li><a href="admission.html">Admission</a></li>
-                                <li><a href="academic-area.html">Academic Area</a></li>
-                                <li><a href="campus-life.html">Campus Life</a></li>
-                                <li><a href="scholarship.html">Scholarship</a></li>
-                                <li><a href="tution-fee.html">Tuition Fee</a></li>
-                                <li><a href="alumni.html">Alumni</a></li>
-                                <li><a href="program-single.html">Program Single</a></li>
-                                <li><a href="department-details.html">Department Details</a></li>
+                                <li><a href="academic.html">Alumni Association SMS</a></li>
+                                <li><a href="admission.html">Chapter Wise Alumni Meet</a></li>
+                                <li><a href="academic-area.html">Alumni Database</a></li>
+                                <li><a href="campus-life.html">Alumni Registration Form</a></li>
+                                <li><a href="scholarship.html">Alumni Engagement</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">EVENTS</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Academic</a></li>
-                                <li><a href="admission.html">Admission</a></li>
-                                <li><a href="academic-area.html">Academic Area</a></li>
-                                <li><a href="campus-life.html">Campus Life</a></li>
-                                <li><a href="scholarship.html">Scholarship</a></li>
-                                <li><a href="tution-fee.html">Tuition Fee</a></li>
-                                <li><a href="alumni.html">Alumni</a></li>
-                                <li><a href="program-single.html">Program Single</a></li>
-                                <li><a href="department-details.html">Department Details</a></li>
+                                <li><a href="academic.html">Seminar/Conferences</a></li>
+                                <li><a href="admission.html">Workshops</a></li>
+                                <li><a href="academic-area.html">Industrial Visits</a></li>
+                                <li><a href="campus-life.html">Guest Lectures</a></li>
+                                <li><a href="scholarship.html">Adharshila</a></li>
+                                <li><a href="tution-fee.html">Fresher/ Farewell</a></li>
+                                <li><a href="alumni.html">Orientation Programme</a></li>
+                                <li><a href="program-single.html">Tech Marathon</a></li>
+                                <li><a href="department-details.html">FDP</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">DOWNLOADS</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Academic</a></li>
-                                <li><a href="admission.html">Admission</a></li>
-                                <li><a href="academic-area.html">Academic Area</a></li>
-                                <li><a href="campus-life.html">Campus Life</a></li>
-                                <li><a href="scholarship.html">Scholarship</a></li>
-                                <li><a href="tution-fee.html">Tuition Fee</a></li>
-                                <li><a href="alumni.html">Alumni</a></li>
-                                <li><a href="program-single.html">Program Single</a></li>
-                                <li><a href="department-details.html">Department Details</a></li>
+                                <li><a href="academic.html">Autonomous Status Approval Letter</a></li>
+                                <li><a href="admission.html">NAAC Accrediation Certificate</a></li>
+                                <li><a href="academic-area.html">AISHE Certificate</a></li>
+                                <li><a href="campus-life.html">SMS Scholarship Form</a></li>
+                                <li><a href="scholarship.html">Hostel Requisition Form</a></li>
+                                <li><a href="tution-fee.html">Video Clips</a></li>
+                                <li><a href="alumni.html">Newsletter</a></li>
+                                <li><a href="program-single.html">Coffee Table Book</a></li>
+                                <li><a href="department-details.html">AICTE Approval</a></li>
+                                <li><a href="department-details.html">Affiliation Letter</a></li>
+                                <li><a href="department-details.html">UGC 12(B) & 2(f) Letter</a></li>
+                                <li><a href="department-details.html">NIRF</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -1917,6 +1904,48 @@
             });
 
         });
+    </script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+
+            const mobileMenuBtn = document.getElementById("mobileMenuBtn");
+            const mobileMenu = document.getElementById("mobileMenu");
+            const mobileOverlay = document.getElementById("mobileOverlay");
+            const mobileCloseBtn = document.getElementById("mobileCloseBtn");
+
+            function openMenu() {
+                mobileMenu.classList.add("active");
+                mobileOverlay.classList.add("active");
+            }
+
+            function closeMenu() {
+                mobileMenu.classList.remove("active");
+                mobileOverlay.classList.remove("active");
+
+                // close all dropdowns
+                document
+                    .querySelectorAll(".mobile-dropdown.open")
+                    .forEach(item => item.classList.remove("open"));
+            }
+
+            /* OPEN */
+            mobileMenuBtn?.addEventListener("click", openMenu);
+
+            /* CLOSE */
+            mobileOverlay?.addEventListener("click", closeMenu);
+            mobileCloseBtn?.addEventListener("click", closeMenu);
+
+            /* SUBMENU TOGGLE */
+            document.querySelectorAll(".mobile-toggle").forEach(toggle => {
+                toggle.addEventListener("click", (e) => {
+                    e.stopPropagation();
+                    toggle.parentElement.classList.toggle("open");
+                });
+            });
+
+        });
+
     </script>
 
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
