commit add some

--- a/index.html
+++ b/index.html
@@ -214,8 +214,10 @@
 
             <div class="mobile-sidebar" id="mobileMenu">
                 <div class="mobile-brand py-5">
-                    <span class="brand-dot"></span>
-                    <span class="brand-text">SMS VARANASI</span>
+                   
+                    <span class="brand-text">
+                        <img src="public/images/icons/logoMain.png" alt="" style="width: 180px;">
+                    </span>
                     <!-- CLOSE BUTTON -->
                     <button class="mobile-close" id="mobileCloseBtn">✕</button>
 
@@ -264,13 +266,13 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="admission.html">Admission</a></li>
-                            <li><a href="academic-area.html">Academic Area</a></li>
-                            <li><a href="campus-life.html">Campus Life</a></li>
-                            <li><a href="scholarship.html">Scholarship</a></li>
-                            <li><a href="tution-fee.html">Tuition Fee</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="academic.html">Director's Message</a></li>
+                            <li><a href="admission.html">Training And Placement Cell</a></li>
+                            <li><a href="academic-area.html">Placement Process</a></li>
+                            <li><a href="campus-life.html">Placement Track Record</a></li>
+                            <li><a href="scholarship.html">List Of Recruiters</a></li>
+                            <li><a href="tution-fee.html">Current Year Placement</a></li>
+                            <li><a href="alumni.html">E- Brochure</a></li>
                         </ul>
                     </li>
 
@@ -280,13 +282,11 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="admission.html">Admission</a></li>
-                            <li><a href="academic-area.html">Academic Area</a></li>
-                            <li><a href="campus-life.html">Campus Life</a></li>
-                            <li><a href="scholarship.html">Scholarship</a></li>
-                            <li><a href="tution-fee.html">Tuition Fee</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="academic.html">Manaf=gement and Commerce</a></li>
+                            <li><a href="admission.html">Computer Science</a></li>
+                            <li><a href="academic-area.html">Visiting Faculty International</a></li>
+                            <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
+                            <li><a href="scholarship.html">Visiting Faculty Industrial</a></li>
                         </ul>
                     </li>
 
@@ -296,13 +296,11 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="admission.html">Admission</a></li>
-                            <li><a href="academic-area.html">Academic Area</a></li>
-                            <li><a href="campus-life.html">Campus Life</a></li>
-                            <li><a href="scholarship.html">Scholarship</a></li>
-                            <li><a href="tution-fee.html">Tuition Fee</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="academic.html">Management Insight Journal</a></li>
+                            <li><a href="admission.html">Purushartha Journal</a></li>
+                            <li><a href="academic-area.html">SMS Journal of Enterpreneurship & Innovation</a></li>
+                            <li><a href="campus-life.html">Commerce Research Review</a></li>
+                            <li><a href="scholarship.html">Computing Trendz</a></li>
                         </ul>
                     </li>
 
@@ -313,13 +311,8 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="admission.html">Admission</a></li>
-                            <li><a href="academic-area.html">Academic Area</a></li>
-                            <li><a href="campus-life.html">Campus Life</a></li>
-                            <li><a href="scholarship.html">Scholarship</a></li>
-                            <li><a href="tution-fee.html">Tuition Fee</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="academic.html">Books & Souvenirs</a></li>
+
                         </ul>
                     </li>
 
@@ -330,13 +323,11 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="admission.html">Admission</a></li>
-                            <li><a href="academic-area.html">Academic Area</a></li>
-                            <li><a href="campus-life.html">Campus Life</a></li>
-                            <li><a href="scholarship.html">Scholarship</a></li>
-                            <li><a href="tution-fee.html">Tuition Fee</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="academic.html">Alumni Association SMS</a></li>
+                            <li><a href="admission.html">Chapter Wise Alumni Meet</a></li>
+                            <li><a href="academic-area.html">Alumni Databas</a></li>
+                            <li><a href="campus-life.html">Alumni Registration Form</a></li>
+                            <li><a href="scholarship.html">Alumni Engagement</a></li>
                         </ul>
                     </li>
                     <li class="mobile-dropdown">
@@ -346,13 +337,15 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="admission.html">Admission</a></li>
-                            <li><a href="academic-area.html">Academic Area</a></li>
-                            <li><a href="campus-life.html">Campus Life</a></li>
-                            <li><a href="scholarship.html">Scholarship</a></li>
-                            <li><a href="tution-fee.html">Tuition Fee</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="academic.html">Seminar/Conferences</a></li>
+                            <li><a href="admission.html">Workshops</a></li>
+                            <li><a href="academic-area.html">Industrial Visits</a></li>
+                            <li><a href="campus-life.html">Guest Lectures</a></li>
+                            <li><a href="scholarship.html">Adharshila</a></li>
+                            <li><a href="tution-fee.html">Fresher/ Farewell</a></li>
+                            <li><a href="alumni.html">Orientation Programme</a></li>
+                            <li><a href="alumni.html">Tech Marathon</a></li>
+                            <li><a href="alumni.html">FDP</a></li>
                         </ul>
                     </li>
                     <li class="mobile-dropdown">
@@ -362,21 +355,21 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="admission.html">Admission</a></li>
-                            <li><a href="academic-area.html">Academic Area</a></li>
-                            <li><a href="campus-life.html">Campus Life</a></li>
-                            <li><a href="scholarship.html">Scholarship</a></li>
-                            <li><a href="tution-fee.html">Tuition Fee</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="academic.html">Autonomous Status Approval Letter</a></li>
+                            <li><a href="admission.html">NAAC Accrediation Certificate</a></li>
+                            <li><a href="academic-area.html">AISHE Certificate</a></li>
+                            <li><a href="campus-life.html">SMS Scholarship Form</a></li>
+                            <li><a href="scholarship.html">Hostel Requisition Form</a></li>
+                            <li><a href="tution-fee.html">Video Clips</a></li>
+                            <li><a href="alumni.html">Newsletter</a></li>
+                            <li><a href="alumni.html">Coffee Table Book</a></li>
+                            <li><a href="alumni.html">AICTE Approval</a></li>
+                            <li><a href="alumni.html">Affiliation Letter</a></li>
+                            <li><a href="alumni.html">UGC 12(B) & 2(f) Letter</a></li>
+                            <li><a href="alumni.html">NIRF</a></li>
                         </ul>
                     </li>
 
-
-                    <li class="pt-6 space-y-3">
-                        <button class="btn btn-outline w-full" onclick="openInquiryModal()">Request Callback</button>
-                        <button class="btn btn-primary w-full" onclick="openApplicationModal()">Apply Now</button>
-                    </li>
 
                 </ul>
             </div>
@@ -398,7 +391,7 @@
                     <div class="swiper-container">
 
                         <div class="swiper-wrapper">
-                             <div class="swiper-slide justify-content-center align-items-center d-flex">
+                            <div class="swiper-slide justify-content-center align-items-center d-flex">
                                 <div class="slide-02 swiper-slide-cover"></div>
                                 <div>Slide 02</div>
                                 <div class="banner-content text-sm-center  text-start ">
@@ -409,7 +402,7 @@
                                     </h1>
                                     <p class="text-xl md:text-2xl text-white mb-8 leading-relaxed animate-slide-up"
                                         style="animation-delay: 100ms;">The aim of the college, for the individual
-                                        student, is to eliminate the need in his life for the college; the task is to
+                                        student, is to eliminate the need in his life for the college the task is to
                                         help him become a self-educating man.- George Horace Lorimer</p>
 
                                     <div class="application-btn d-flex justify-content-start justify-content-sm-center">
@@ -447,7 +440,7 @@
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
-                           
+
                             <div class="swiper-slide justify-content-center align-items-center d-flex">
                                 <div class="slide-03 swiper-slide-cover"></div>
                                 <div>Slide 03</div>
@@ -473,8 +466,6 @@
                                 </div>
                             </div>
                         </div>
-
-
 
                         <div class="swiper-pagination"></div>
 
@@ -824,7 +815,7 @@
         <div class="container-custom">
             <div class="text-center mb-16">
                 <span
-                    class="inline-block px-4 py-2 bg-primary-50 color-yellow font-cta font-semibold rounded-full mb-4">Recognized
+                    class="inline-block px-4 py-2 bg-blue color-yellow font-cta font-semibold rounded-full mb-4">Recognized
                     Excellence</span>
                 <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue mb-6">Accredited & Awarded</h2>
                 <p class="text-xl text-text-secondary max-w-3xl mx-auto">Nationally recognized for academic excellence
@@ -1251,7 +1242,7 @@
         <div class="container-custom">
             <div class="text-center mb-16">
                 <span
-                    class="inline-block px-4 py-2 bg-primary-50 color-yellow font-cta font-semibold rounded-full mb-4">Career
+                    class="inline-block px-4 py-2 bg-blue color-yellow font-cta font-semibold rounded-full mb-4">Career
                     Success</span>
                 <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue mb-6">Proven Results</h2>
                 <p class="text-xl text-text-secondary max-w-3xl mx-auto">Our students secure positions in India's top
@@ -1304,7 +1295,7 @@
         <div class="container-custom">
             <div class="text-center mb-16">
                 <span
-                    class="inline-block px-4 py-2 bg-primary-50 color-yellow font-cta font-semibold rounded-full mb-4">Success
+                    class="inline-block px-4 py-2 bg-blue color-yellow font-cta font-semibold rounded-full mb-4">Success
                     Stories</span>
                 <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue mb-6">What Our Alumni Say</h2>
                 <p class="text-xl text-text-secondary max-w-3xl mx-auto">Hear from students who transformed their
@@ -1907,47 +1898,60 @@
         });
     </script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
+   <script>
+document.addEventListener("DOMContentLoaded", () => {
 
-            const mobileMenuBtn = document.getElementById("mobileMenuBtn");
-            const mobileMenu = document.getElementById("mobileMenu");
-            const mobileOverlay = document.getElementById("mobileOverlay");
-            const mobileCloseBtn = document.getElementById("mobileCloseBtn");
+  const mobileMenuBtn  = document.getElementById("mobileMenuBtn");
+  const mobileMenu     = document.getElementById("mobileMenu");
+  const mobileOverlay  = document.getElementById("mobileOverlay");
+  const mobileCloseBtn = document.getElementById("mobileCloseBtn");
 
-            function openMenu() {
-                mobileMenu.classList.add("active");
-                mobileOverlay.classList.add("active");
-            }
+  function openMenu() {
+    mobileMenu.classList.add("active");
+    mobileOverlay.classList.add("active");
+  }
 
-            function closeMenu() {
-                mobileMenu.classList.remove("active");
-                mobileOverlay.classList.remove("active");
+  function closeMenu() {
+    mobileMenu.classList.remove("active");
+    mobileOverlay.classList.remove("active");
 
-                // close all dropdowns
-                document
-                    .querySelectorAll(".mobile-dropdown.open")
-                    .forEach(item => item.classList.remove("open"));
-            }
+    // 🔥 close all dropdowns smoothly
+    document
+      .querySelectorAll(".mobile-dropdown.open")
+      .forEach(item => item.classList.remove("open"));
+  }
 
-            /* OPEN */
-            mobileMenuBtn?.addEventListener("click", openMenu);
+  /* OPEN MENU */
+  mobileMenuBtn?.addEventListener("click", openMenu);
 
-            /* CLOSE */
-            mobileOverlay?.addEventListener("click", closeMenu);
-            mobileCloseBtn?.addEventListener("click", closeMenu);
+  /* CLOSE MENU */
+  mobileOverlay?.addEventListener("click", closeMenu);
+  mobileCloseBtn?.addEventListener("click", closeMenu);
 
-            /* SUBMENU TOGGLE */
-            document.querySelectorAll(".mobile-toggle").forEach(toggle => {
-                toggle.addEventListener("click", (e) => {
-                    e.stopPropagation();
-                    toggle.parentElement.classList.toggle("open");
-                });
-            });
+  /* ===============================
+     ACCORDION SUBMENU LOGIC
+  =============================== */
+  document.querySelectorAll(".mobile-toggle").forEach(toggle => {
+    toggle.addEventListener("click", (e) => {
+      e.stopPropagation();
 
-        });
+      const currentItem = toggle.parentElement;
 
-    </script>
+      // 👉 close other open dropdowns
+      document.querySelectorAll(".mobile-dropdown.open").forEach(item => {
+        if (item !== currentItem) {
+          item.classList.remove("open");
+        }
+      });
+
+      // 👉 toggle current
+      currentItem.classList.toggle("open");
+    });
+  });
+
+});
+</script>
+
 
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11.1.0/swiper-bundle.min.js"></script>
