--- a/index.html
+++ b/index.html
@@ -2083,10 +2083,10 @@ document.addEventListener("DOMContentLoaded", () => {
                 },
 
                 // Autoplay
-                //autoplay: {
-                //    delay: 5000,
-                //    disableOnInteraction: false,
-                //},
+                autoplay: {
+                    delay: 5000,
+                    disableOnInteraction: false,
+                },
 
                 // Use slide or fade transition effect
                 speed: 2000,
