--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Manaf=gement and Commerce</a></li>
+                            <li><a href="academic.html">Management and Commerce</a></li>
                             <li><a href="admission.html">Computer Science</a></li>
                             <li><a href="academic-area.html">Visiting Faculty International</a></li>
                             <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
