add testimonial images

--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,7 @@
                     <div class="swiper-slide">
                         <div class="card card-hover p-8">
                             <div class="flex items-center mb-6">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_15c0063cf-1763297381852.png"
+                                <img src="public/images/testi/tripathi.jpeg"
                                     alt="Portrait of Rahul Sharma, MBA graduate now working at Deloitte"
                                     class="w-16 h-16 rounded-full object-cover mr-4">
                                 <div>
@@ -1305,7 +1305,7 @@
                     <div class="swiper-slide">
                         <div class="card card-hover p-8">
                             <div class="flex items-center mb-6">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_10d056ae9-1763294317999.png"
+                                <img src="public/images/testi/vaishali.jpg"
                                     alt="Portrait of Priya Patel, PGDM graduate now working at Amazon"
                                     class="w-16 h-16 rounded-full object-cover mr-4">
                                 <div>
@@ -1325,7 +1325,7 @@
                     <div class="swiper-slide">
                         <div class="card card-hover p-8 position-relative">
                             <div class="flex items-center mb-6">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_1cbee50a4-1763296279384.png"
+                                <img src="public/images/testi/amit.jpg"
                                     alt="Portrait of Amit Kumar, Executive MBA graduate now VP at HDFC Bank"
                                     class="w-16 h-16 rounded-full object-cover mr-4">
                                 <div>
@@ -1346,7 +1346,7 @@
                     <div class="swiper-slide">
                         <div class="card card-hover p-8 position-relative">
                             <div class="flex items-center mb-6">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_1cbee50a4-1763296279384.png"
+                                <img src="public/images/testi/rohit.jpg"
                                     alt="Portrait of Amit Kumar, Executive MBA graduate now VP at HDFC Bank"
                                     class="w-16 h-16 rounded-full object-cover mr-4">
                                 <div>
@@ -1367,7 +1367,7 @@
                     <div class="swiper-slide">
                         <div class="card card-hover p-8 position-relative">
                             <div class="flex items-center mb-6">
-                                <img src="https://img.rocket.new/generatedImages/rocket_gen_img_1cbee50a4-1763296279384.png"
+                                <img src="public/images/testi/vikram.jpg"
                                     alt="Portrait of Amit Kumar, Executive MBA graduate now VP at HDFC Bank"
                                     class="w-16 h-16 rounded-full object-cover mr-4">
                                 <div>
@@ -1381,6 +1381,36 @@
                                 to changing times. I am confident that SMS Varanasi will continue to produce exceptional
                                 leaders who will make a positive impact on society.I have seen SMS Varanasi grow and
                                 evolve over the years.</p>
+                        </div>
+                    </div>
+                     <div class="swiper-slide">
+                        <div class="card card-hover p-8 position-relative">
+                            <div class="flex items-center mb-6">
+                                <img src="public/images/testi/dhanraj.jpg"
+                                    alt="Portrait of Amit Kumar, Executive MBA graduate now VP at HDFC Bank"
+                                    class="w-16 h-16 rounded-full object-cover mr-4">
+                                <div>
+                                    <h4 class="font-headline font-bold text-secondary">Mr. Dhananjai Tripathi</h4>
+                                    <!-- <p class="text-sm text-text-secondary"> HDFC Bank</p> -->
+                                </div>
+                            </div>
+
+                            <p class="text-text-secondary italic mb-4">One of the things that I appreciated the most about SMS Varanasi was the emphasis on practical learning. The institution provides students with opportunities to engage in real-world projects and internships, which helped me gain valuable experience and prepare for my career. I feel well-equipped to take on any challenge thanks to the education I received at SMS Varanasi.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card card-hover p-8 position-relative">
+                            <div class="flex items-center mb-6">
+                                <img src="public/images/testi/lavanya.jpeg"
+                                    alt="Portrait of Amit Kumar, Executive MBA graduate now VP at HDFC Bank"
+                                    class="w-16 h-16 rounded-full object-cover mr-4">
+                                <div>
+                                    <h4 class="font-headline font-bold text-secondary">Ms. Lavanya Shrestha</h4>
+                                    <!-- <p class="text-sm text-text-secondary"> HDFC Bank</p> -->
+                                </div>
+                            </div>
+
+                            <p class="text-text-secondary italic mb-4">During my graduation journey, high quality learning was not just a curriculum; it was an immersive experience crafted by dedicated teachers. Their mentorship did not just impart knowledge; it sparked a passion for excellence, guiding me towards a future where possibilities are limitless and learning knows no bounds.</p>
                         </div>
                     </div>
                 </div>
